# wallpaper-engine-gui

./: Cargo.toml  README.md  shell.nix
packaging/: PKGBUILD  README.md  wallpaper-engine-linux.desktop
src/: gui.rs  index.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: desktop.rs  gui.rs  history.rs  index.html  kde.rs  lib.rs  main.rs  workshop.rs
src-tauri/src/steam/: mod.rs
src-tauri/src/wallpaper/: mod.rs
src/steam/: mod.rs
src/wallpaper/: mod.rs
