[package]
name = "app"
version = "0.1.0"
description = "Wallpaper Engine Linux desktop runtime"
authors = ["donskyblock"]
license = "MIT"
repository = "https://github.com/donskyblock/wallpaper-engine-gui"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
directories = "5.0"
flate2 = "1.1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
tar = "0.4"
regex = "1.11"
